# essabu-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  release.yml  security.yml  typecheck.yml
docs/: accounting.md  asset.md  einvoice.md  getting-started.md  hr.md  identity.md  modules.md  payment.md  project.md  trade.md
essabu/: __init__.py  client.py  config.py
essabu/accounting/: __init__.py  client.py
essabu/accounting/api/: __init__.py  base.py  base_api.py
essabu/accounting/models/: __init__.py  pagination.py
essabu/asset/: __init__.py  client.py
essabu/asset/api/: __init__.py  assets.py  base.py  depreciations.py  fuel_logs.py  maintenance_logs.py  maintenance_schedules.py  trip_logs.py  vehicles.py
essabu/asset/models/: __init__.py  asset.py  depreciation.py  fuel_log.py  maintenance_log.py  maintenance_schedule.py  pagination.py  trip_log.py  vehicle.py
essabu/common/: __init__.py  auth.py  exceptions.py  http_client.py  models.py
essabu/einvoice/: __init__.py  client.py
essabu/einvoice/api/: __init__.py  base.py  compliance.py  invoices.py  statistics.py  submissions.py  verification.py
essabu/einvoice/models/: __init__.py  common.py  compliance.py  invoice.py  pagination.py  statistics.py  submission.py  verification.py
essabu/hr/: __init__.py  client.py
essabu/hr/api/: __init__.py  attendance.py  base.py  benefits.py  config_api.py  contracts.py  departments.py  disciplinary.py  documents.py  employees.py  expenses.py  history.py  leaves.py  loans.py  onboarding.py  payroll.py  performance.py  positions.py  recruitment.py  reports.py  shift_schedules.py  shifts.py  skills.py  timesheets.py  training.py  webhooks.py
essabu/hr/models/: __init__.py  pagination.py
essabu/identity/: __init__.py  client.py
essabu/identity/api/: __init__.py  api_keys.py  auth.py  base.py  branches.py  companies.py  permissions.py  profiles.py  roles.py  sessions.py  tenants.py  users.py
essabu/identity/models/: __init__.py  api_key.py  auth.py  branch.py  common.py  company.py  permission.py  profile.py  role.py  session.py  tenant.py  user.py
essabu/payment/: __init__.py  client.py
essabu/payment/api/: __init__.py  base.py  collaterals.py  financial_accounts.py  kyc_documents.py  kyc_profiles.py  loan_applications.py  loan_products.py  loan_repayments.py  payment_accounts.py  payment_intents.py  refunds.py  reports.py  subscription_plans.py  subscriptions.py  transactions.py
essabu/payment/models/: __init__.py  collateral.py  financial_account.py  kyc_document.py  kyc_profile.py  loan_application.py  loan_product.py  loan_repayment.py  pagination.py  payment_account.py  payment_intent.py  refund.py  report.py  subscription.py  subscription_plan.py  transaction.py
essabu/project/: __init__.py  client.py
essabu/project/api/: __init__.py  base.py  milestones.py  projects.py  reports.py  resource_allocations.py  task_comments.py  tasks.py
essabu/project/models/: __init__.py  milestone.py  pagination.py  project.py  task.py  (+3 more)
essabu/trade/: __init__.py  client.py
examples/: authentication.py  create_employee.py  create_invoice.py  crm_pipeline.py  einvoice_submit.py  loan_application.py  process_payment.py  webhook_handler.py
tests/: __init__.py  test_accounting.py  test_asset.py  test_client.py  test_einvoice.py  test_exceptions.py  test_hr.py  test_http_client.py  test_identity.py  test_models.py  test_payment.py  test_project.py  test_trade.py
(+73 files in other folders)
