[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "essabu"
version = "1.0.0"
description = "Unified Python SDK for all Essabu services (HR, Accounting, Identity, Trade, Payment, EInvoice, Project, Asset)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Essabu", email = "dev@essabu.com"},
]
keywords = ["essabu", "sdk", "api", "saas", "billing", "accounting", "hr", "payment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/essabu/essabu-python"
Documentation = "https://docs.essabu.com/sdks/python"
Repository = "https://github.com/essabu/essabu-python"
Changelog = "https://github.com/essabu/essabu-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["essabu*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
